# sso-manager

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  makefile  pyproject.toml  requirements.txt
.github/: dependabot.yaml
.github/workflows/: linting.yaml  scanning.yaml  testing.yaml
cfn/params/: main.json
cfn/templates/: cwl.yaml  kms.yaml  main.yaml
iac/aws/params/: main.json
iac/aws/templates/: cwl.yaml  ddb.yaml  kms.yaml  main.yaml
src/: README.md  samconfig.toml
src/app/: index.py  requirements.txt
src/app/lib/: assignments.py  aws_dynamodb.py  aws_identitycenter.py  aws_identitycentre.py  aws_identitystore.py  aws_organizations.py  aws_sso_resolver.py  ddb.py  org.py  sso.py  sso_manifest.py  utils.py
src/app/schemas/: manifest_schema_definition.json
src/aws/app/: index.py
src/lambdas/regex_rules/: README.md  template.yaml
src/lambdas/sso_groups/: README.md  template.yaml
src/layers/python/: pyproject.toml
src/tests/unit/: test_get_regex_rules.py  test_non_functional.py  test_put_regex_rules.py  test_put_sso_assignments.py
tests/: conftest.py  requirements.txt
tests/aws/: conftest.py
tests/configs/: aws_assignment_rules.json  aws_org_1.json  aws_org_2.json  aws_permission_set_details.json  aws_sso_groups_details.json  aws_sso_users_details.json
tests/unit/: aws_org_details.json  aws_organizations_details.json  test_dynamodb.py  test_identitystore.py  test_index.py  test_lambda_handler.py  test_manifests.py  test_organizations.py  test_sso_resolver.py  utils.py
tools/: sam_build.sh  sam_clean.sh
(+44 files in other folders)
