[build-system]
requires = [
    "setuptools==70.1.1",
    "wheel==0.43.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "sso_manager"
version = "0.1.0"
description = "A brief description of your project"
authors = [
    { name = "Islam Elkadi", email = "ielkadi@icloud.com" }
]
dependencies = [
    "jsonschema==4.22.0",
    "boto3==1.34.136",
    "aws-lambda-powertools[tracer,validation]==2.27.1"
]

[project.optional-dependencies]
dev = [
    "pre-commit==3.6.0",
    "pyclean==3.0.0",
    "moto==4.2.8",
    "pytest==8.1.1",
    "pytest-order==1.2.1",
    "pytest-xdist==3.6.1",
    "pylint==3.0.3",
    "black==23.12.0",
    "shellcheck-py==0.10.0.1"
]  # Add any development dependencies here

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v -ra -q -p no:warnings"
log_cli = true
log_cli_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
minversion = "6.0"
filterwarnings = "ignore"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
